--- a/Event/Event2/example3.html
+++ b/Event/Event2/example3.html
@@ -4,32 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script>
-        let x=prompt("Enter the input");
-        if(isNaN(x)){
-
-            document.write('You didnot entered the number');
-        }
-
-        let b=Number(x);
-        if(b>0 && b<=9){
-
-            document.write("Your entered a single digit");
-
-
-        }
-        else if(b>9 && b<=99){
-
-            document.write('Yu entered the 2 digit')
-        }
-        else{
-
-            document.write('you entered the multiple digit');
-        }
-
-    </script>
 </head>
 <body>
+    <script>
+
+        var products=[
+            {Name:"TV",Price:45000.55},
+            {Name:"Mobile",Price:33000.55},
+            {Name:"Shirt",Price:3100.33}
+        ]
+
+        function GetDetails(product){
+
+            var details=[product.Name ,product.Price].join("--->")+"<br/>";
+            return details;
+        }
+
+        function printDetails(){
+
+            var output=products.map(GetDetails).join(' ');
+            document.body.innerHTML=output;
+        }
+        printDetails();
+    </script>
     
 </body>
 </html>
